option('with_directx', type: 'boolean', value: true)
option('with_fmt', type: 'boolean', value: true)
option('with_mysql', type: 'boolean', value: true)
option('with_openal', type: 'boolean', value: true)
option('with_sdl', type: 'boolean', value: true)
option('with_sqlite', type: 'boolean', value: true)
option('with_ssl', type: 'boolean', value: true)
option('with_ui', type: 'boolean', value: true)
option('with_uv', type: 'boolean', value: true)
option('with_video', type: 'boolean', value: true)
option('vendored_deps', type: 'boolean', value: true)