vendored_deps = get_option('vendored_deps')

glext_dep = declare_dependency(include_directories: 'gl')

pcre_dep = declare_dependency(
	include_directories: 'pcre',
	compile_args: ['-DHAVE_CONFIG_H', '-DPCRE2_CODE_UNIT_WIDTH=16'],
	sources: [
		'pcre/pcre2_auto_possess.c',
		'pcre/pcre2_chartables.c',
		'pcre/pcre2_compile.c',
		'pcre/pcre2_config.c',
		'pcre/pcre2_context.c',
		'pcre/pcre2_convert.c',
		'pcre/pcre2_dfa_match.c',
		'pcre/pcre2_error.c',
		'pcre/pcre2_extuni.c',
		'pcre/pcre2_find_bracket.c',
		'pcre/pcre2_jit_compile.c',
		'pcre/pcre2_maketables.c',
		'pcre/pcre2_match.c',
		'pcre/pcre2_match_data.c',
		'pcre/pcre2_newline.c',
		'pcre/pcre2_ord2utf.c',
		'pcre/pcre2_pattern_info.c',
		'pcre/pcre2_script_run.c',
		'pcre/pcre2_serialize.c',
		'pcre/pcre2_string_utils.c',
		'pcre/pcre2_study.c',
		'pcre/pcre2_substitute.c',
		'pcre/pcre2_substring.c',
		'pcre/pcre2_tables.c',
		'pcre/pcre2_ucd.c',
		'pcre/pcre2_ucptables.c',
		'pcre/pcre2_valid_utf.c',
		'pcre/pcre2_xclass.c',
	],
)

sqlite_dep = declare_dependency(include_directories: 'sqlite/src', sources: ['sqlite/src/sqlite3.c'], dependencies:  [thread_dep, libdl_dep])

if vendored_deps
	meson.override_dependency('libpcre2-16', pcre_dep)
	meson.override_dependency('sqlite3', sqlite_dep)
endif

minimp3_dep = declare_dependency(include_directories: ['minimp3'])

mikktspace_dep = declare_dependency(
	include_directories: ['mikktspace'],
	sources: ['mikktspace/mikktspace.c'],
	dependencies: [m_dep],
)

mdbg_dep = declare_dependency(
	include_directories: ['.', 'mdbg'],
	sources: ['mdbg/mach_excServer.c', 'mdbg/mach_excUser.c', 'mdbg/mdbg.c'],
)

if vendored_deps and host_machine.system() == 'windows'
	fallback_libuv_dep = declare_dependency(
		include_directories: ['libuv/include', 'libuv/src', 'libuv/src/win'],
		sources: [
			'libuv/src/fs-poll.c',
			'libuv/src/inet.c',
			'libuv/src/threadpool.c',
			'libuv/src/uv-common.c',
			'libuv/src/version.c',
			'libuv/src/win/async.c',
			'libuv/src/win/core.c',
			'libuv/src/win/dl.c',
			'libuv/src/win/error.c',
			'libuv/src/win/fs.c',
			'libuv/src/win/fs-event.c',
			'libuv/src/win/getaddrinfo.c',
			'libuv/src/win/getnameinfo.c',
			'libuv/src/win/handle.c',
			'libuv/src/win/loop-watcher.c',
			'libuv/src/win/pipe.c',
			'libuv/src/win/poll.c',
			'libuv/src/win/process.c',
			'libuv/src/win/process-stdio.c',
			'libuv/src/win/req.c',
			'libuv/src/win/signal.c',
			'libuv/src/win/snprintf.c',
			'libuv/src/win/stream.c',
			'libuv/src/win/tcp.c',
			'libuv/src/win/thread.c',
			'libuv/src/win/timer.c',
			'libuv/src/win/tty.c',
			'libuv/src/win/udp.c',
			'libuv/src/win/util.c',
			'libuv/src/win/winapi.c',
			'libuv/src/win/winsock.c',
		],
	)
	meson.override_dependency('libuv', fallback_libuv_dep)

	fallback_mbedtls_dep = declare_dependency(
		include_directories: ['mbedtls/include'],
		sources: [
			'mbedtls/library/aes.c',
			'mbedtls/library/aesni.c',
			'mbedtls/library/arc4.c',
			'mbedtls/library/asn1parse.c',
			'mbedtls/library/asn1write.c',
			'mbedtls/library/base64.c',
			'mbedtls/library/bignum.c',
			'mbedtls/library/blowfish.c',
			'mbedtls/library/camellia.c',
			'mbedtls/library/ccm.c',
			'mbedtls/library/certs.c',
			'mbedtls/library/cipher.c',
			'mbedtls/library/cipher_wrap.c',
			'mbedtls/library/cmac.c',
			'mbedtls/library/ctr_drbg.c',
			'mbedtls/library/debug.c',
			'mbedtls/library/des.c',
			'mbedtls/library/dhm.c',
			'mbedtls/library/ecdh.c',
			'mbedtls/library/ecdsa.c',
			'mbedtls/library/ecjpake.c',
			'mbedtls/library/ecp.c',
			'mbedtls/library/ecp_curves.c',
			'mbedtls/library/entropy.c',
			'mbedtls/library/entropy_poll.c',
			'mbedtls/library/error.c',
			'mbedtls/library/gcm.c',
			'mbedtls/library/havege.c',
			'mbedtls/library/hmac_drbg.c',
			'mbedtls/library/md2.c',
			'mbedtls/library/md4.c',
			'mbedtls/library/md5.c',
			'mbedtls/library/md.c',
			'mbedtls/library/md_wrap.c',
			'mbedtls/library/memory_buffer_alloc.c',
			'mbedtls/library/net_sockets.c',
			'mbedtls/library/oid.c',
			'mbedtls/library/padlock.c',
			'mbedtls/library/pem.c',
			'mbedtls/library/pk.c',
			'mbedtls/library/pkcs11.c',
			'mbedtls/library/pkcs12.c',
			'mbedtls/library/pkcs5.c',
			'mbedtls/library/pkparse.c',
			'mbedtls/library/pk_wrap.c',
			'mbedtls/library/pkwrite.c',
			'mbedtls/library/platform.c',
			'mbedtls/library/ripemd160.c',
			'mbedtls/library/rsa.c',
			'mbedtls/library/rsa_internal.c',
			'mbedtls/library/sha1.c',
			'mbedtls/library/sha256.c',
			'mbedtls/library/sha512.c',
			'mbedtls/library/ssl_cache.c',
			'mbedtls/library/ssl_ciphersuites.c',
			'mbedtls/library/ssl_cli.c',
			'mbedtls/library/ssl_cookie.c',
			'mbedtls/library/ssl_srv.c',
			'mbedtls/library/ssl_ticket.c',
			'mbedtls/library/ssl_tls.c',
			'mbedtls/library/threading.c',
			'mbedtls/library/timing.c',
			'mbedtls/library/version.c',
			'mbedtls/library/version_features.c',
			'mbedtls/library/x509.c',
			'mbedtls/library/x509_create.c',
			'mbedtls/library/x509_crl.c',
			'mbedtls/library/x509_crt.c',
			'mbedtls/library/x509_csr.c',
			'mbedtls/library/x509write_crt.c',
			'mbedtls/library/x509write_csr.c',
			'mbedtls/library/xtea.c',
		],
	)
	meson.override_dependency('mbedcrypto', fallback_mbedtls_dep)
	meson.override_dependency('mbedtls', fallback_mbedtls_dep)
	meson.override_dependency('mbedx509', fallback_mbedtls_dep)

	fallback_png_dep = declare_dependency(
		include_directories: 'png',
		sources: [
			'png/png.c',
			'png/pngerror.c',
			'png/pngget.c',
			'png/pngmem.c',
			'png/pngpread.c',
			'png/pngread.c',
			'png/pngrio.c',
			'png/pngrtran.c',
			'png/pngrutil.c',
			'png/pngset.c',
			'png/pngtrans.c',
			'png/pngwio.c',
			'png/pngwrite.c',
			'png/pngwtran.c',
			'png/pngwutil.c',
		],
	)
	meson.override_dependency('libpng', fallback_png_dep)
	assert(host_machine.cpu_family() == 'x86_64' or host_machine.cpu_family() == 'x86')
	fallback_turbojpeg_dep = declare_dependency(
		include_directories: [
			'turbojpeg',
			host_machine.cpu_family() == 'x86_64' ? 'turbojpeg/x64' : 'turbojpeg/x86',
		],
		link_args: [
			host_machine.cpu_family() == 'x86_64' ? 'turbojpeg/x64/simd.lib' : 'turbojpeg/x86/simd.lib',
		],
		sources: [
			host_machine.cpu_family() == 'x86_64' ? 'turbojpeg/x64/jsimd_x86_64.c' : 'turbojpeg/x86/jsimd_i368.c',
			'turbojpeg/jaricom.c',
			'turbojpeg/jcapimin.c',
			'turbojpeg/jcapistd.c',
			'turbojpeg/jcarith.c',
			'turbojpeg/jccoefct.c',
			'turbojpeg/jccolext.c',
			'turbojpeg/jccolor.c',
			'turbojpeg/jcdctmgr.c',
			'turbojpeg/jchuff.c',
			'turbojpeg/jcinit.c',
			'turbojpeg/jcmainct.c',
			'turbojpeg/jcmarker.c',
			'turbojpeg/jcmaster.c',
			'turbojpeg/jcomapi.c',
			'turbojpeg/jcparam.c',
			'turbojpeg/jcphuff.c',
			'turbojpeg/jcprepct.c',
			'turbojpeg/jcsample.c',
			'turbojpeg/jctrans.c',
			'turbojpeg/jdapimin.c',
			'turbojpeg/jdapistd.c',
			'turbojpeg/jdarith.c',
			'turbojpeg/jdatadst.c',
			'turbojpeg/jdatadst-tj.c',
			'turbojpeg/jdatasrc.c',
			'turbojpeg/jdatasrc-tj.c',
			'turbojpeg/jdcoefct.c',
			'turbojpeg/jdcol565.c',
			'turbojpeg/jdcolext.c',
			'turbojpeg/jdcolor.c',
			'turbojpeg/jddctmgr.c',
			'turbojpeg/jdhuff.c',
			'turbojpeg/jdinput.c',
			'turbojpeg/jdmainct.c',
			'turbojpeg/jdmarker.c',
			'turbojpeg/jdmaster.c',
			'turbojpeg/jdmerge.c',
			'turbojpeg/jdmrg565.c',
			'turbojpeg/jdmrgext.c',
			'turbojpeg/jdphuff.c',
			'turbojpeg/jdpostct.c',
			'turbojpeg/jdsample.c',
			'turbojpeg/jdtrans.c',
			'turbojpeg/jerror.c',
			'turbojpeg/jfdctflt.c',
			'turbojpeg/jfdctfst.c',
			'turbojpeg/jfdctint.c',
			'turbojpeg/jidctflt.c',
			'turbojpeg/jidctfst.c',
			'turbojpeg/jidctint.c',
			'turbojpeg/jidctred.c',
			'turbojpeg/jmemmgr.c',
			'turbojpeg/jmemnobs.c',
			'turbojpeg/jquant1.c',
			'turbojpeg/jquant2.c',
			'turbojpeg/jsimd.c',
			'turbojpeg/jsimd_none.c',
			'turbojpeg/jstdhuff.c',
			'turbojpeg/jutils.c',
			'turbojpeg/transupp.c',
			'turbojpeg/turbojpeg.c',

		],
	)
	meson.override_dependency('turbojpeg', fallback_turbojpeg_dep)

	fallback_vorbis_dep = declare_dependency(
		include_directories: ['vorbis'],
		sources: [
			'vorbis/bitrate.c',
			'vorbis/bitwise.c',
			'vorbis/block.c',
			'vorbis/codebook.c',
			'vorbis/envelope.c',
			'vorbis/floor0.c',
			'vorbis/floor1.c',
			'vorbis/framing.c',
			'vorbis/info.c',
			'vorbis/lookup.c',
			'vorbis/lpc.c',
			'vorbis/lsp.c',
			'vorbis/mapping0.c',
			'vorbis/mdct.c',
			'vorbis/psy.c',
			'vorbis/registry.c',
			'vorbis/res0.c',
			'vorbis/sharedbook.c',
			'vorbis/smallft.c',
			'vorbis/synthesis.c',
			'vorbis/vorbisfile.c',
			'vorbis/window.c',
		],
	)
	meson.override_dependency('vorbisfile', fallback_vorbis_dep)

	fallback_zlib_dep = declare_dependency(
		include_directories: 'zlib',
		sources: [
			'zlib/adler32.c',
			'zlib/crc32.c',
			'zlib/deflate.c',
			'zlib/inffast.c',
			'zlib/inflate.c',
			'zlib/inftrees.c',
			'zlib/trees.c',
			'zlib/zutil.c',
		],
	)
	meson.override_dependency('zlib', fallback_zlib_dep)
endif