# avcodec_dep = dependency('libavcodec')
# avformat_dep = dependency('libavformat')
# avutil_dep = dependency('libavutil')
# swscale_dep = dependency('libswscale')

# shared_library(
# 	'video',
# 	['video.c'],
# 	name_prefix: '',
# 	name_suffix: 'hdll',
# 	dependencies: [libhl_dep, avcodec_dep, avformat_dep, avutil_dep, swscale_dep],
# )